--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 			background-size: cover;
 			height: 300px;
 		}
+		.btn-primary.custom-btn {
+			background-color: #46166B; 
+			border-color: #2e0e47; 
+			color: #DB9F11;
+		}
 	</style>
 
 </head>
@@ -51,12 +56,15 @@
 			<div class="col-sm">
 				<p>
 					<h1 class="display-4 text-black">GradTracker Pro</h1>
+					<div class="float-right">
+						<button type="button" class="btn btn-primary custom-btn" data-toggle="modal" data-target="#exampleModal">
+  							Edit Data
+						</button>
+					</div>
 				</p>
 			</div>
-
 		</div>
 	</div>
-
 
 	<div class="container table-container">
 		<div class="row">
@@ -79,16 +87,16 @@
 									$('#example').DataTable({
 										data: dataSet,
 										columns: [
+											{ title: "Name" },
+											{ title: "Position" },
+											{ title: "Location" },
 											{ title: "L Number" },
-											{ title: "Last Name" },
-											{ title: "First Name" },
-											{ title: "Grad Year" },
-											{ title: "Grad Sem" },
-											{ title: "Major" }
+											{ title: "Grad Date" },
+											{ title: "Salary" },
+											//{ title: " " } // link to popup with more info
 										]
 									}); // end datatable config
 								}); // end ajax req
-
 						}); // end jquery ready
 					</script>
 			</div>
@@ -96,6 +104,51 @@
 	</div>
 	</div>
 	</div>
+	</div>
+
+	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Edit Data</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          				<span aria-hidden="true">&times;</span>
+        			</button>
+				</div>
+				<div class="modal-body">
+					<table id="modal" class="table table-striped table-bordered table-responsive" style="width:100%"></table>
+					<script>
+						/* global $*/
+						$(document).ready(function() {
+							console.log('Jquery ready...');
+							$.ajax("/api/datatable")
+								.done(function(data) {
+									$('#mess').html('');
+									console.log(data);
+									console.log(JSON.parse(data));
+									let dataSet = JSON.parse(data);
+									$('#modal').DataTable({
+										data: dataSet,
+										columns: [
+											{ title: "Name" },
+											{ title: "Position" },
+											{ title: "Location" },
+											{ title: "L Number" },
+											{ title: "Grad Date" },
+											{ title: "Salary" },
+											//{ title: " " } // link to popup with more info
+										]
+									}); // end datatable config
+								}); // end ajax req
+						}); // end jquery ready
+					</script>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-primary custom-btn">Save changes</button>
+				</div>
+			</div>
+		</div>
 	</div>
 
 </body>
