--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
 			background-size: cover;
 			height: 300px;
 		}
+
 		.btn-primary.custom-btn {
-			background-color: #46166B; 
-			border-color: #2e0e47; 
+			background-color: #46166B;
+			border-color: #2e0e47;
 			color: #DB9F11;
 		}
 	</style>
@@ -57,8 +58,11 @@
 				<p>
 					<h1 class="display-4 text-black">GradTracker Pro</h1>
 					<div class="float-right">
-						<button type="button" class="btn btn-primary custom-btn" data-toggle="modal" data-target="#exampleModal">
-  							Edit Data
+						<button type="button" class="btn btn-primary custom-btn" data-toggle="modal" data-target="#createModal">
+  							Create
+						</button>
+						<button type="button" class="btn btn-primary custom-btn" data-toggle="modal" data-target="#editModal">
+  							Edit / Delete Data
 						</button>
 					</div>
 				</p>
@@ -106,7 +110,86 @@
 	</div>
 	</div>
 
-	<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+	<!-- Modal for adding a student to the database -->
+	<div class="modal fade" id="createModal" tabindex="-1" role="dialog" aria-labelledby="createModalLabel" aria-hidden="true">
+		<div class="modal-dialog" role="document">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="exampleModalLabel">Create Data</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          				<span aria-hidden="true">&times;</span>
+        			</button>
+				</div>
+				<div class="modal-body">
+					<form id="insertForm" action="">
+						<div class="form-group">
+							<label for="name">Name</label>
+							<input type="text" class="form-control" id="name" placeholder="Enter name">
+						</div>
+						<div class="form-group">
+							<label for="position">Position</label>
+							<input type="text" class="form-control" id="position" placeholder="Enter position">
+						</div>
+						<div class="form-group">
+							<label for="location">Location</label>
+							<input type="text" class="form-control" id="location" placeholder="Enter working location">
+						</div>
+						<div class="form-group">
+							<label for="lnumber">L Number</label>
+							<input type="number" class="form-control" id="lnumber" aria-describedby="lnumHelp" placeholder="Enter L Number">
+							<small id="lnumHelp" class="form-text text-muted">This can be found on the front of your Mane Card.</small>
+						</div>
+						<div class="form-group">
+							<label for="graddate">Graduation Date</label>
+							<input type="date" class="form-control" id="graddate" placeholder="Enter graduation date">
+						</div>
+						<div class="form-group">
+							<label for="salary">Salary</label>
+							<input type="number" class="form-control" id="salary" placeholder="Enter salary">
+						</div>
+						<button type="submit" class="btn btn-primary custom-btn">Submit</button>
+						<script>
+							/*global $*/
+							$(function() {
+
+								$('#insertForm').on('submit', function(event) {
+
+									event.preventDefault();
+
+									var formData = {
+										'name': 		$('#name').val(),
+										'position': 	$('#position').val(),
+										'location':		$('#location').val(),
+										'lnumber':		$('#lnumber').val(),
+										'graddate': 	$('#graddate').val(),
+										'salary': 		$('#salary').val()
+									};
+
+									$.ajax({
+										type: 'post',
+										url: '/db/post',
+										data: formData,
+										success: function() {
+											alert('Form successfully submitted');
+										},
+										error: function() {
+											alert('Error in form submission');
+										}
+									});
+								});
+							});
+						</script>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- Modal for editing or deleting a student from the database -->
+	<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -116,32 +199,7 @@
         			</button>
 				</div>
 				<div class="modal-body">
-					<table id="modal" class="table table-striped table-bordered table-responsive" style="width:100%"></table>
-					<script>
-						/* global $*/
-						$(document).ready(function() {
-							console.log('Jquery ready...');
-							$.ajax("/api/datatable")
-								.done(function(data) {
-									$('#mess').html('');
-									console.log(data);
-									console.log(JSON.parse(data));
-									let dataSet = JSON.parse(data);
-									$('#modal').DataTable({
-										data: dataSet,
-										columns: [
-											{ title: "Name" },
-											{ title: "Position" },
-											{ title: "Location" },
-											{ title: "L Number" },
-											{ title: "Grad Date" },
-											{ title: "Salary" },
-											//{ title: " " } // link to popup with more info
-										]
-									}); // end datatable config
-								}); // end ajax req
-						}); // end jquery ready
-					</script>
+
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
